// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addAllUsers 1`] = `
Object {
  "payload": Object {
    "nextLink": undefined,
    "users": Array [
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/1?v=4",
        "events_url": "https://api.github.com/users/mojombo/events{/privacy}",
        "followers_url": "https://api.github.com/users/mojombo/followers",
        "following_url": "https://api.github.com/users/mojombo/following{/other_user}",
        "gists_url": "https://api.github.com/users/mojombo/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/mojombo",
        "id": 1,
        "login": "mojombo",
        "organizations_url": "https://api.github.com/users/mojombo/orgs",
        "received_events_url": "https://api.github.com/users/mojombo/received_events",
        "repos_url": "https://api.github.com/users/mojombo/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/mojombo/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/mojombo/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/mojombo",
      },
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/2?v=4",
        "events_url": "https://api.github.com/users/defunkt/events{/privacy}",
        "followers_url": "https://api.github.com/users/defunkt/followers",
        "following_url": "https://api.github.com/users/defunkt/following{/other_user}",
        "gists_url": "https://api.github.com/users/defunkt/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/defunkt",
        "id": 2,
        "login": "defunkt",
        "organizations_url": "https://api.github.com/users/defunkt/orgs",
        "received_events_url": "https://api.github.com/users/defunkt/received_events",
        "repos_url": "https://api.github.com/users/defunkt/repos",
        "site_admin": true,
        "starred_url": "https://api.github.com/users/defunkt/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/defunkt/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/defunkt",
      },
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/3?v=4",
        "events_url": "https://api.github.com/users/pjhyett/events{/privacy}",
        "followers_url": "https://api.github.com/users/pjhyett/followers",
        "following_url": "https://api.github.com/users/pjhyett/following{/other_user}",
        "gists_url": "https://api.github.com/users/pjhyett/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/pjhyett",
        "id": 3,
        "login": "pjhyett",
        "organizations_url": "https://api.github.com/users/pjhyett/orgs",
        "received_events_url": "https://api.github.com/users/pjhyett/received_events",
        "repos_url": "https://api.github.com/users/pjhyett/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/pjhyett/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/pjhyett/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/pjhyett",
      },
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/4?v=4",
        "events_url": "https://api.github.com/users/wycats/events{/privacy}",
        "followers_url": "https://api.github.com/users/wycats/followers",
        "following_url": "https://api.github.com/users/wycats/following{/other_user}",
        "gists_url": "https://api.github.com/users/wycats/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/wycats",
        "id": 4,
        "login": "wycats",
        "organizations_url": "https://api.github.com/users/wycats/orgs",
        "received_events_url": "https://api.github.com/users/wycats/received_events",
        "repos_url": "https://api.github.com/users/wycats/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/wycats/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/wycats/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/wycats",
      },
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/5?v=4",
        "events_url": "https://api.github.com/users/ezmobius/events{/privacy}",
        "followers_url": "https://api.github.com/users/ezmobius/followers",
        "following_url": "https://api.github.com/users/ezmobius/following{/other_user}",
        "gists_url": "https://api.github.com/users/ezmobius/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/ezmobius",
        "id": 5,
        "login": "ezmobius",
        "organizations_url": "https://api.github.com/users/ezmobius/orgs",
        "received_events_url": "https://api.github.com/users/ezmobius/received_events",
        "repos_url": "https://api.github.com/users/ezmobius/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/ezmobius/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/ezmobius/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/ezmobius",
      },
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/6?v=4",
        "events_url": "https://api.github.com/users/ivey/events{/privacy}",
        "followers_url": "https://api.github.com/users/ivey/followers",
        "following_url": "https://api.github.com/users/ivey/following{/other_user}",
        "gists_url": "https://api.github.com/users/ivey/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/ivey",
        "id": 6,
        "login": "ivey",
        "organizations_url": "https://api.github.com/users/ivey/orgs",
        "received_events_url": "https://api.github.com/users/ivey/received_events",
        "repos_url": "https://api.github.com/users/ivey/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/ivey/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/ivey/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/ivey",
      },
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/7?v=4",
        "events_url": "https://api.github.com/users/evanphx/events{/privacy}",
        "followers_url": "https://api.github.com/users/evanphx/followers",
        "following_url": "https://api.github.com/users/evanphx/following{/other_user}",
        "gists_url": "https://api.github.com/users/evanphx/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/evanphx",
        "id": 7,
        "login": "evanphx",
        "organizations_url": "https://api.github.com/users/evanphx/orgs",
        "received_events_url": "https://api.github.com/users/evanphx/received_events",
        "repos_url": "https://api.github.com/users/evanphx/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/evanphx/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/evanphx/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/evanphx",
      },
      Object {
        "avatar_url": "https://avatars1.githubusercontent.com/u/17?v=4",
        "events_url": "https://api.github.com/users/vanpelt/events{/privacy}",
        "followers_url": "https://api.github.com/users/vanpelt/followers",
        "following_url": "https://api.github.com/users/vanpelt/following{/other_user}",
        "gists_url": "https://api.github.com/users/vanpelt/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/vanpelt",
        "id": 17,
        "login": "vanpelt",
        "organizations_url": "https://api.github.com/users/vanpelt/orgs",
        "received_events_url": "https://api.github.com/users/vanpelt/received_events",
        "repos_url": "https://api.github.com/users/vanpelt/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/vanpelt/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/vanpelt/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/vanpelt",
      },
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/18?v=4",
        "events_url": "https://api.github.com/users/wayneeseguin/events{/privacy}",
        "followers_url": "https://api.github.com/users/wayneeseguin/followers",
        "following_url": "https://api.github.com/users/wayneeseguin/following{/other_user}",
        "gists_url": "https://api.github.com/users/wayneeseguin/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/wayneeseguin",
        "id": 18,
        "login": "wayneeseguin",
        "organizations_url": "https://api.github.com/users/wayneeseguin/orgs",
        "received_events_url": "https://api.github.com/users/wayneeseguin/received_events",
        "repos_url": "https://api.github.com/users/wayneeseguin/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/wayneeseguin/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/wayneeseguin/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/wayneeseguin",
      },
      Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/19?v=4",
        "events_url": "https://api.github.com/users/brynary/events{/privacy}",
        "followers_url": "https://api.github.com/users/brynary/followers",
        "following_url": "https://api.github.com/users/brynary/following{/other_user}",
        "gists_url": "https://api.github.com/users/brynary/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/brynary",
        "id": 19,
        "login": "brynary",
        "organizations_url": "https://api.github.com/users/brynary/orgs",
        "received_events_url": "https://api.github.com/users/brynary/received_events",
        "repos_url": "https://api.github.com/users/brynary/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/brynary/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/brynary/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/brynary",
      },
      Object {
        "avatar_url": "https://avatars3.githubusercontent.com/u/20?v=4",
        "events_url": "https://api.github.com/users/kevinclark/events{/privacy}",
        "followers_url": "https://api.github.com/users/kevinclark/followers",
        "following_url": "https://api.github.com/users/kevinclark/following{/other_user}",
        "gists_url": "https://api.github.com/users/kevinclark/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/kevinclark",
        "id": 20,
        "login": "kevinclark",
        "organizations_url": "https://api.github.com/users/kevinclark/orgs",
        "received_events_url": "https://api.github.com/users/kevinclark/received_events",
        "repos_url": "https://api.github.com/users/kevinclark/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/kevinclark/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/kevinclark/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/kevinclark",
      },
      Object {
        "avatar_url": "https://avatars3.githubusercontent.com/u/21?v=4",
        "events_url": "https://api.github.com/users/technoweenie/events{/privacy}",
        "followers_url": "https://api.github.com/users/technoweenie/followers",
        "following_url": "https://api.github.com/users/technoweenie/following{/other_user}",
        "gists_url": "https://api.github.com/users/technoweenie/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/technoweenie",
        "id": 21,
        "login": "technoweenie",
        "organizations_url": "https://api.github.com/users/technoweenie/orgs",
        "received_events_url": "https://api.github.com/users/technoweenie/received_events",
        "repos_url": "https://api.github.com/users/technoweenie/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/technoweenie/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/technoweenie/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/technoweenie",
      },
      Object {
        "avatar_url": "https://avatars3.githubusercontent.com/u/22?v=4",
        "events_url": "https://api.github.com/users/macournoyer/events{/privacy}",
        "followers_url": "https://api.github.com/users/macournoyer/followers",
        "following_url": "https://api.github.com/users/macournoyer/following{/other_user}",
        "gists_url": "https://api.github.com/users/macournoyer/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/macournoyer",
        "id": 22,
        "login": "macournoyer",
        "organizations_url": "https://api.github.com/users/macournoyer/orgs",
        "received_events_url": "https://api.github.com/users/macournoyer/received_events",
        "repos_url": "https://api.github.com/users/macournoyer/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/macournoyer/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/macournoyer/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/macournoyer",
      },
      Object {
        "avatar_url": "https://avatars3.githubusercontent.com/u/23?v=4",
        "events_url": "https://api.github.com/users/takeo/events{/privacy}",
        "followers_url": "https://api.github.com/users/takeo/followers",
        "following_url": "https://api.github.com/users/takeo/following{/other_user}",
        "gists_url": "https://api.github.com/users/takeo/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/takeo",
        "id": 23,
        "login": "takeo",
        "organizations_url": "https://api.github.com/users/takeo/orgs",
        "received_events_url": "https://api.github.com/users/takeo/received_events",
        "repos_url": "https://api.github.com/users/takeo/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/takeo/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/takeo/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/takeo",
      },
      Object {
        "avatar_url": "https://avatars3.githubusercontent.com/u/25?v=4",
        "events_url": "https://api.github.com/users/Caged/events{/privacy}",
        "followers_url": "https://api.github.com/users/Caged/followers",
        "following_url": "https://api.github.com/users/Caged/following{/other_user}",
        "gists_url": "https://api.github.com/users/Caged/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/Caged",
        "id": 25,
        "login": "Caged",
        "organizations_url": "https://api.github.com/users/Caged/orgs",
        "received_events_url": "https://api.github.com/users/Caged/received_events",
        "repos_url": "https://api.github.com/users/Caged/repos",
        "site_admin": true,
        "starred_url": "https://api.github.com/users/Caged/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/Caged/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/Caged",
      },
      Object {
        "avatar_url": "https://avatars3.githubusercontent.com/u/26?v=4",
        "events_url": "https://api.github.com/users/topfunky/events{/privacy}",
        "followers_url": "https://api.github.com/users/topfunky/followers",
        "following_url": "https://api.github.com/users/topfunky/following{/other_user}",
        "gists_url": "https://api.github.com/users/topfunky/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/topfunky",
        "id": 26,
        "login": "topfunky",
        "organizations_url": "https://api.github.com/users/topfunky/orgs",
        "received_events_url": "https://api.github.com/users/topfunky/received_events",
        "repos_url": "https://api.github.com/users/topfunky/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/topfunky/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/topfunky/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/topfunky",
      },
      Object {
        "avatar_url": "https://avatars3.githubusercontent.com/u/27?v=4",
        "events_url": "https://api.github.com/users/anotherjesse/events{/privacy}",
        "followers_url": "https://api.github.com/users/anotherjesse/followers",
        "following_url": "https://api.github.com/users/anotherjesse/following{/other_user}",
        "gists_url": "https://api.github.com/users/anotherjesse/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/anotherjesse",
        "id": 27,
        "login": "anotherjesse",
        "organizations_url": "https://api.github.com/users/anotherjesse/orgs",
        "received_events_url": "https://api.github.com/users/anotherjesse/received_events",
        "repos_url": "https://api.github.com/users/anotherjesse/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/anotherjesse/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/anotherjesse/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/anotherjesse",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/28?v=4",
        "events_url": "https://api.github.com/users/roland/events{/privacy}",
        "followers_url": "https://api.github.com/users/roland/followers",
        "following_url": "https://api.github.com/users/roland/following{/other_user}",
        "gists_url": "https://api.github.com/users/roland/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/roland",
        "id": 28,
        "login": "roland",
        "organizations_url": "https://api.github.com/users/roland/orgs",
        "received_events_url": "https://api.github.com/users/roland/received_events",
        "repos_url": "https://api.github.com/users/roland/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/roland/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/roland/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/roland",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/29?v=4",
        "events_url": "https://api.github.com/users/lukas/events{/privacy}",
        "followers_url": "https://api.github.com/users/lukas/followers",
        "following_url": "https://api.github.com/users/lukas/following{/other_user}",
        "gists_url": "https://api.github.com/users/lukas/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/lukas",
        "id": 29,
        "login": "lukas",
        "organizations_url": "https://api.github.com/users/lukas/orgs",
        "received_events_url": "https://api.github.com/users/lukas/received_events",
        "repos_url": "https://api.github.com/users/lukas/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/lukas/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/lukas/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/lukas",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/30?v=4",
        "events_url": "https://api.github.com/users/fanvsfan/events{/privacy}",
        "followers_url": "https://api.github.com/users/fanvsfan/followers",
        "following_url": "https://api.github.com/users/fanvsfan/following{/other_user}",
        "gists_url": "https://api.github.com/users/fanvsfan/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/fanvsfan",
        "id": 30,
        "login": "fanvsfan",
        "organizations_url": "https://api.github.com/users/fanvsfan/orgs",
        "received_events_url": "https://api.github.com/users/fanvsfan/received_events",
        "repos_url": "https://api.github.com/users/fanvsfan/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/fanvsfan/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/fanvsfan/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/fanvsfan",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/31?v=4",
        "events_url": "https://api.github.com/users/tomtt/events{/privacy}",
        "followers_url": "https://api.github.com/users/tomtt/followers",
        "following_url": "https://api.github.com/users/tomtt/following{/other_user}",
        "gists_url": "https://api.github.com/users/tomtt/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/tomtt",
        "id": 31,
        "login": "tomtt",
        "organizations_url": "https://api.github.com/users/tomtt/orgs",
        "received_events_url": "https://api.github.com/users/tomtt/received_events",
        "repos_url": "https://api.github.com/users/tomtt/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/tomtt/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/tomtt/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/tomtt",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/32?v=4",
        "events_url": "https://api.github.com/users/railsjitsu/events{/privacy}",
        "followers_url": "https://api.github.com/users/railsjitsu/followers",
        "following_url": "https://api.github.com/users/railsjitsu/following{/other_user}",
        "gists_url": "https://api.github.com/users/railsjitsu/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/railsjitsu",
        "id": 32,
        "login": "railsjitsu",
        "organizations_url": "https://api.github.com/users/railsjitsu/orgs",
        "received_events_url": "https://api.github.com/users/railsjitsu/received_events",
        "repos_url": "https://api.github.com/users/railsjitsu/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/railsjitsu/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/railsjitsu/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/railsjitsu",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/34?v=4",
        "events_url": "https://api.github.com/users/nitay/events{/privacy}",
        "followers_url": "https://api.github.com/users/nitay/followers",
        "following_url": "https://api.github.com/users/nitay/following{/other_user}",
        "gists_url": "https://api.github.com/users/nitay/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/nitay",
        "id": 34,
        "login": "nitay",
        "organizations_url": "https://api.github.com/users/nitay/orgs",
        "received_events_url": "https://api.github.com/users/nitay/received_events",
        "repos_url": "https://api.github.com/users/nitay/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/nitay/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/nitay/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/nitay",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/35?v=4",
        "events_url": "https://api.github.com/users/kevwil/events{/privacy}",
        "followers_url": "https://api.github.com/users/kevwil/followers",
        "following_url": "https://api.github.com/users/kevwil/following{/other_user}",
        "gists_url": "https://api.github.com/users/kevwil/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/kevwil",
        "id": 35,
        "login": "kevwil",
        "organizations_url": "https://api.github.com/users/kevwil/orgs",
        "received_events_url": "https://api.github.com/users/kevwil/received_events",
        "repos_url": "https://api.github.com/users/kevwil/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/kevwil/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/kevwil/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/kevwil",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/36?v=4",
        "events_url": "https://api.github.com/users/KirinDave/events{/privacy}",
        "followers_url": "https://api.github.com/users/KirinDave/followers",
        "following_url": "https://api.github.com/users/KirinDave/following{/other_user}",
        "gists_url": "https://api.github.com/users/KirinDave/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/KirinDave",
        "id": 36,
        "login": "KirinDave",
        "organizations_url": "https://api.github.com/users/KirinDave/orgs",
        "received_events_url": "https://api.github.com/users/KirinDave/received_events",
        "repos_url": "https://api.github.com/users/KirinDave/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/KirinDave/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/KirinDave/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/KirinDave",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/37?v=4",
        "events_url": "https://api.github.com/users/jamesgolick/events{/privacy}",
        "followers_url": "https://api.github.com/users/jamesgolick/followers",
        "following_url": "https://api.github.com/users/jamesgolick/following{/other_user}",
        "gists_url": "https://api.github.com/users/jamesgolick/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/jamesgolick",
        "id": 37,
        "login": "jamesgolick",
        "organizations_url": "https://api.github.com/users/jamesgolick/orgs",
        "received_events_url": "https://api.github.com/users/jamesgolick/received_events",
        "repos_url": "https://api.github.com/users/jamesgolick/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/jamesgolick/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/jamesgolick/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/jamesgolick",
      },
      Object {
        "avatar_url": "https://avatars3.githubusercontent.com/u/38?v=4",
        "events_url": "https://api.github.com/users/atmos/events{/privacy}",
        "followers_url": "https://api.github.com/users/atmos/followers",
        "following_url": "https://api.github.com/users/atmos/following{/other_user}",
        "gists_url": "https://api.github.com/users/atmos/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/atmos",
        "id": 38,
        "login": "atmos",
        "organizations_url": "https://api.github.com/users/atmos/orgs",
        "received_events_url": "https://api.github.com/users/atmos/received_events",
        "repos_url": "https://api.github.com/users/atmos/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/atmos/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/atmos/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/atmos",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/44?v=4",
        "events_url": "https://api.github.com/users/errfree/events{/privacy}",
        "followers_url": "https://api.github.com/users/errfree/followers",
        "following_url": "https://api.github.com/users/errfree/following{/other_user}",
        "gists_url": "https://api.github.com/users/errfree/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/errfree",
        "id": 44,
        "login": "errfree",
        "organizations_url": "https://api.github.com/users/errfree/orgs",
        "received_events_url": "https://api.github.com/users/errfree/received_events",
        "repos_url": "https://api.github.com/users/errfree/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/errfree/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/errfree/subscriptions",
        "type": "Organization",
        "url": "https://api.github.com/users/errfree",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/45?v=4",
        "events_url": "https://api.github.com/users/mojodna/events{/privacy}",
        "followers_url": "https://api.github.com/users/mojodna/followers",
        "following_url": "https://api.github.com/users/mojodna/following{/other_user}",
        "gists_url": "https://api.github.com/users/mojodna/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/mojodna",
        "id": 45,
        "login": "mojodna",
        "organizations_url": "https://api.github.com/users/mojodna/orgs",
        "received_events_url": "https://api.github.com/users/mojodna/received_events",
        "repos_url": "https://api.github.com/users/mojodna/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/mojodna/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/mojodna/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/mojodna",
      },
      Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/46?v=4",
        "events_url": "https://api.github.com/users/bmizerany/events{/privacy}",
        "followers_url": "https://api.github.com/users/bmizerany/followers",
        "following_url": "https://api.github.com/users/bmizerany/following{/other_user}",
        "gists_url": "https://api.github.com/users/bmizerany/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/bmizerany",
        "id": 46,
        "login": "bmizerany",
        "organizations_url": "https://api.github.com/users/bmizerany/orgs",
        "received_events_url": "https://api.github.com/users/bmizerany/received_events",
        "repos_url": "https://api.github.com/users/bmizerany/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/bmizerany/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/bmizerany/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/bmizerany",
      },
    ],
  },
  "type": "ADD_ALL_USERS",
}
`;

exports[`setCurrentUser 1`] = `
Object {
  "payload": Object {
    "avatar_url": "https://avatars2.githubusercontent.com/u/47?v=4",
    "bio": "@github 💻 🔧 ",
    "blog": "http://jnewland.com",
    "company": "GitHub",
    "created_at": "2008-01-25T02:28:12Z",
    "email": null,
    "events_url": "https://api.github.com/users/jnewland/events{/privacy}",
    "followers": 606,
    "followers_url": "https://api.github.com/users/jnewland/followers",
    "following": 86,
    "following_url": "https://api.github.com/users/jnewland/following{/other_user}",
    "gists_url": "https://api.github.com/users/jnewland/gists{/gist_id}",
    "gravatar_id": "",
    "hireable": null,
    "html_url": "https://github.com/jnewland",
    "id": 47,
    "location": "Austin, TX",
    "login": "jnewland",
    "name": "Jesse Newland",
    "organizations_url": "https://api.github.com/users/jnewland/orgs",
    "public_gists": 40,
    "public_repos": 105,
    "received_events_url": "https://api.github.com/users/jnewland/received_events",
    "repos_url": "https://api.github.com/users/jnewland/repos",
    "site_admin": true,
    "starred_url": "https://api.github.com/users/jnewland/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/jnewland/subscriptions",
    "type": "User",
    "updated_at": "2018-05-08T14:08:23Z",
    "url": "https://api.github.com/users/jnewland",
  },
  "type": "SET_CURRENT_USER",
}
`;

exports[`setDataAsCompleted for github list of users 1`] = `
Object {
  "payload": undefined,
  "subType": "USERS",
  "type": "DATA_LOADER_COMPLETED",
}
`;

exports[`setDataAsCompleted for the current user details 1`] = `
Object {
  "payload": undefined,
  "subType": "CURRENT_USER",
  "type": "DATA_LOADER_COMPLETED",
}
`;

exports[`setDataAsError for github list of users 1`] = `
Object {
  "payload": "USERS",
  "subType": undefined,
  "type": "DATA_LOADER_ERROR",
}
`;

exports[`setDataAsError for the current user details 1`] = `
Object {
  "payload": "CURRENT_USER",
  "subType": undefined,
  "type": "DATA_LOADER_ERROR",
}
`;

exports[`setDataAsLoading for github list of users 1`] = `
Object {
  "payload": undefined,
  "subType": "USERS",
  "type": "DATA_LOADER_LOADING",
}
`;

exports[`setDataAsLoading for the current user details 1`] = `
Object {
  "payload": undefined,
  "subType": "CURRENT_USER",
  "type": "DATA_LOADER_LOADING",
}
`;
